assets/css/about.css
.about-bg {
  background-color: #f0f0f0;
}

/* .hero-about{
  display: flex;
  width: 100%;
  height: 35vh;
  min-height: 200px;
  align-items: flex-end;
} */

.hero-about{
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 80px;
  min-height: 80px;
  align-items: flex-start;
  margin: 18% auto 10% 0;
  border-top: 8px solid white;
}

@media only screen and (max-width: 678px) {

  .hero-about{
    margin: 50% auto 10% 0;
  }

}

.hero-about h4{
  font-size: calc(42px + (90 - 42) * ((100vw - 320px) / (1600 - 320)));
  margin-top: -5%;
  margin-left: 5%;
  background: #f0f0f0;
}

@media only screen and (max-width: 678px) {
  
  .hero-about h4{
    margin-top: -10%;
  }

}

.hero-about h5{
  font-size: calc(18px + (42 - 18) * ((100vw - 320px) / (1600 - 320)));
  margin-left: 5%;
}

/* .hero-about h4{
  margin-left: 5%;
  margin-bottom: .05em;
} */



.blue {
  color: blue;
  text-decoration: underline;
  font-weight: 700;
}

/* ----- Standard Grid Sheets ----- */

.sheet {
  display: grid;
  width: 90%;
  padding: 2%;
  margin: 8% auto;
}

.sheet.one {
  margin-top: 0;
}

@media all and (min-width:1367px) { 

  .sheet {
    width: 75%;
    padding: 3%;
    margin: 4% auto;
  }
  .hero-about h4{
    margin-left: 15.5%;
  }
}

@media only screen and (max-width: 678px) {
  
  .sheet {
    min-width: 85%;
    padding: 7%;
    margin: 30px auto;
    grid-template-columns: 90vw;
    grid-template-rows: auto;
  }

}

/* ----- End Standard Grid Sheets ----- */

/* ----- Start of Grid - Page 1 ----- */

.sheet.one.bg-light-gray :first-child,
.sheet.one.bg-light-gray :nth-child(2){
  grid-column: 1 / -1;
}

.one {
  height: 75%;
  grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
  grid-template-rows: auto minmax(20px, auto);
  row-gap: 1.5em;
  column-gap: 1em;
}
/* ----- End of Grid - Page 1 ----- */


/* ----- Start of Grid - Page 2 ----- */
.g2-i-1 {
  grid-area: work1;
  display: inline;
  align-self: end;
}

.g2-i-2 {
  grid-area: work2;
  max-width: 100%;
}

.g2-i-3 {
  grid-area: work3;
  max-width: 100%;
}

.two {
  display: grid;
  grid-template-columns: repeat(2, 49%);
  grid-template-areas: 
    "work1 work1"
    "work2 work3";
  gap: 20px;
}

@media only screen and (max-width: 678px) {

  .two {
    grid-template-columns: 100%;
    grid-template-areas: 
      "work1"
      "work2"
      "work3";
  }
}

/* ----- End of Grid - Page 2 ----- */

/* ----- Start of Grid - Page 3 ----- */

.g3-i-1 {
  grid-area: references;
  max-width: 100%;
  align-self: center;
  transform: rotate(-90deg) translateX(-85%) translateY(50%);
  -moz-transform: rotate(-90deg) translateX(-85%) translateY(50%);
  -webkit-transform: rotate(-90deg) translateX(-85%) translateY(50%);
  font-size: calc(24px + (130 - 24) * ((100vw - 320px) / (1600 - 320)));;;
  z-index: 1;
  /* text-align: right; */
}

@media only screen and (max-width: 678px) {

  .g3-i-1 {
    transform: rotate(0deg) translate(0%);
    -moz-transform: rotate(0deg) translate(0%);
    -webkit-transform: rotate(0deg) translate(0%);
    justify-self: start;
  }
  
}

.g3-i-2 {
  text-align: left;
  max-width: 100%;
  padding: 2% 15%;
  grid-area: desc-ref;
  z-index: 1;
  /* align-self: end; */
}

.g3-i-3 {
  grid-area: quote;
  max-width: 100%;
  padding: 0% 15%;
  z-index: 1;
}

.g3-i-4 {
  grid-area: quote2;
  max-width: 100%;
  padding: 0% 15%;
  z-index: 1;
}

.oval {
  grid-column: 2 / 3;
  grid-row: 1 / 4;
  height: 100%;
  width: 95% ;
  background-image: radial-gradient(circle at top right, #E1D0AE, #fdbc89 50%);
  border-radius: 42% 58% 70% 30% / 48% 69% 31% 52% ;
  opacity: 0.7;
  justify-self: center;
  align-self: end;
  box-shadow: inset 0 0 15px rgba(55, 84, 170, 0),
              inset 0 0 20px rgba(255, 255, 255, 0), 7px 7px 15px rgba(55, 84, 170, 0.15),
              -7px -7px 20px rgba(255, 255, 255, 1),
              inset 0px 0px 4px rgba(255, 255, 255, 0.2);
  z-index: 0;
  animation: blob 30s cubic-bezier(.86,0,.07,1) alternate-reverse infinite;
  -webkit-animation: blob 30s cubic-bezier(.86,0,.07,1) alternate-reverse infinite;
}

@media only screen and (max-width: 678px) {

  .oval {
    grid-column: 1 / 2;
    grid-row: 2 / 5;
  }
  
}



@keyframes blob {
  0%   {transform: scale(1) skew(1deg, 2deg)}
  25%  {transform: skew(-1deg, 1deg)}
  50%  {transform: skew(1deg, -1deg)}
  100% {transform: scale(1.05) skew(2deg, 1deg)}
}

@-webkit-keyframes blob {
  0%   {-webkit-transform: scale(1) skew(1deg, 2deg)}
  25%  {-webkit-transform: skew(-1deg, 1deg)}
  50%  {-webkit-transform: skew(1deg, -1deg)}
  100% {-webkit-transform: scale(1.05) skew(2deg, 1deg)}
}

.three {
  height: 75%;
  grid-template-rows: repeat(3, 25%);
  grid-template-columns: 15% 85%;
  grid-template-areas: 
    "references desc-ref"
    "references quote"
    "references quote2";
  gap: 20px;
}

@media only screen and (max-width: 678px) {

  .three {
    grid-template-rows: 100%;
    grid-template-columns: 100%;
    grid-template-areas: 
    "references"
    "desc-ref"
    "quote"
    "quote2";
  }

}

.sheet.three h3{
  font-size: calc(12px + (18 - 12) * ((100vw - 320px) / (1600 - 320)));;;
  color:#ff0000; 
  font-family: 'Libre Baskerville', sans-serif;
  font-weight: 700;
  margin: 0px 10% 30px 0;
  letter-spacing: 1px;
  line-height: 1.5em;
}



@media only screen and (max-width: 678px) {

  .g3-i-2,
  .g3-i-3,
  .g3-i-4 {
    padding: 0;
  }

}

/* ----- End of Grid - Page 2 ----- */

/* ----- Start of Grid - Page 4 ----- */
.g4-i-1 {
  grid-area: title;
  color:#3D3D3D; 
  font-family: 'Montserrat', sans-serif;
  font-weight: 700;
  line-height: 1.4;
}

.g4-i-2 {
  grid-area: edu1;
  max-width: 100%;
}

.g4-i-3 {
  grid-area: edu2;
  max-width: 100%;
}

.g4-i-4 {
  grid-area: image;
  object-fit: cover;
  width: 100%;
  box-shadow: 12px 6px 6px #9C9C9C;
}

@media only screen and (max-width: 678px) {

  .g4-i-4 {
    width: 65%;
    justify-self: start;
  }

}

.four {
  grid-template-columns: repeat(1fr);
  grid-template-areas: 
    "image title title"
    "image edu1 edu2";
  gap: 20px;
}

@media only screen and (max-width: 678px) {

  .four {
    grid-template-columns: 100%;
    grid-template-areas: 
      "image"
      "title"
      "header"
      "edu1"
      "edu2";
  }
}

/* ----- End of Grid - Page 4 ----- */

/* ----- Layout for Small Screens ----- */
@media only screen and (max-width: 678px) {

  h5 {
    font-size: 16px;
  }

  h6 {
    font-size: 14px;
  }
  
}

/* ----- Small Screens ----- */


.ref{
  margin-left: 100px;
}

